# contacts-database

./: Dockerfile  README.md  app.py  pyproject.toml
contacts_database/domain/: contact.py  contact_document.py  person.py
contacts_database/repository/: contact_repository.py  person_repository.py
contacts_database/repository/es/: elasticsearch_contact_repository.py
contacts_database/service/: elasticsearch_service.py
mappings/: contact_index_v0.json
