[tool.poetry]
name = "contacts-database"
version = "0.1.0"
description = "Contact list project."
authors = ["Eren-Ajani Tshimanga <eren.tish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.15.0"
elasticsearch-dsl = "^7.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
